# moeb

./: .env  .env.sample  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  NEEX LEGAL CONTRACT REVIEW EXECUTION BLUEPRINT (Service & Deliverables Contract) (1).docx  PROJECT_STATUS.md  README.md  init-project.sh  install-all.sh  pyproject.toml  requirements.txt  setup-dev.sh  setup-financial.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: loader.py
src/: __init__.py  main.py
src/ai/: legal_nlp.py  negotiation_advisor.py  risk_assessor.py
src/cli/: main.py
src/config/: __init__.py  blueprint.yaml  clause_definitions.yaml  review_templates.yaml
src/core/: analysis_context.py  clause_analyzer.py  contract_parser.py  processing_stage.py  report_generator.py  review_orchestrator.py
src/scrapers/: fetcher.py  whois_lookup.py
src/utils/: html.py
tests/: conftest.py  test_html.py  test_loader.py  test_main.py
tests/fixtures/expected_outputs/: simple_service_agreement_analysis.json
tests/fixtures/sample_contracts/: high_risk_contract.txt  simple_service_agreement.txt
tests/integration/: test_full_pipeline.py
tests/unit/: test_clause_analyzer.py  test_cli.py  test_contract_parser.py  test_negotiation_advisor.py  test_report_generator.py  test_review_orchestrator.py
